[package]
name = "rgit"
version = "0.0.1"
authors = ["Macklan Weinstein <wolfgangwazzlestrauss@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
clap = "3.0.0-beta.2"
sha3 = "0.9.1"

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }
proptest = "0.10.1"
rstest = "0.6.4"
tempfile = "3.1.0"
test-case = "1.0.0"

[target.x86_64-unknown-linux-gnu.dev-dependencies]
cargo-tarpaulin = "0.14.3"

[[bench]]
name = "main"
harness = false
