[package]
authors = ["Macklan Weinstein <wolfgangwazzlestrauss@gmail.com>"]
description = "Personal implementation of Git with Rust"
documentation = "https://wolfgangwazzlestrauss.github.io/rgit"
edition = "2018"
homepage = "https://github.com/wolfgangwazzlestrauss/rgit"
license = "MIT"
name = "rgit"
readme = "README.md"
version = "0.0.1"

[dependencies]
anyhow = "1.0.32"
clap = "3.0.0-beta.2"
sha3 = "0.9.1"

[dev-dependencies]
assert_cmd = "1.0.3"
criterion = { version = "0.3.4", features = ["html_reports"] }
predicates = "1.0.7"
proptest = "0.10.1"
rstest = "0.6.4"
tempfile = "3.1.0"
test-case = "1.0.0"

[target.x86_64-unknown-linux-gnu.dev-dependencies]
cargo-tarpaulin = "0.14.3"

[[bench]]
name = "main"
harness = false
