[package]
authors = ["Macklan Weinstein <wolfgangwazzlestrauss@gmail.com>"]
description = "Personal implementation of Git in Rust"
documentation = "https://wolfgangwazzlestrauss.github.io/rgit"
edition = "2018"
homepage = "https://github.com/wolfgangwazzlestrauss/rgit"
license = "MIT"
name = "rgit"
readme = "README.md"
version = "0.0.7"

[dependencies]
clap = "3.0.0-beta.2"
color-eyre = "0.5.10"
eyre = "0.6.5"
sha3 = "0.9.1"
thiserror = "1.0.24"

[dev-dependencies]
assert_cmd = "1.0.3"
criterion = { version = "0.3.4", features = ["html_reports"] }
predicates = "1.0.7"
proptest = "0.10.1"
rstest = "0.6.4"
tempfile = "3.1.0"
test-case = "1.0.1"

[target.x86_64-unknown-linux-gnu.dev-dependencies]
cargo-tarpaulin = "0.14.3"

[[bench]]
name = "main"
harness = false
